--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "ip": "^1.1.5",
+    "mongoose": "^5.3.10",
     "shortid": "^2.2.14",
     "urlencode": "^1.1.0",
     "weixin-pay": "^1.1.7"
