change some file, and pay flow maybe is right.

--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "ip": "^1.1.5",
+    "moment": "^2.22.2",
     "mongoose": "^5.3.10",
     "shortid": "^2.2.14",
     "urlencode": "^1.1.0",
